	* doc/en/DiaSharp/StateChangedArgs.xml: Ditto
	* doc/en/DiaSharp/StateChangedHandler.xml: Ditto
	* doc/en/DiaSharp/TextChangedArgs.xml: Ditto
	* doc/en/DiaSharp/TextChangedHandler.xml: Ditto
	* doc/en/DiaSharp/UnselectedItemArgs.xml: Ditto
	* doc/en/DiaSharp/UnselectedItemHandler.xml: Ditto
	* doc/en/DiaSharp/ZOrderArgs.xml: Ditto
	* doc/en/DiaSharp/ZOrderHandler.xml: Ditto

2003-10-10  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* doc/en/Dia/Canvas.xml: Documented some more
	* doc/en/Dia/CanvasItemForeachFunc.xml: Fixed a bad method tag
	* doc/en/Dia/CanvasItemForeachFunc.xml: Ditto

2003-10-09  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* api/dia-api.xml: Removed
	* api/dia-symbols.xml: Removed
	* api/makefile: Removed
	* api/.cvsignore: Removed
	* dia/dia-api.xml: Added
	* dia/dia-symbols.xml: Added
	* dia/.cvsignore: Updated with generated-stamp
	* dia/makefile: Updated to generate c# code from dia-api.xml and dia-symbols.xml
	* sources/dia-sharp-sources.xml: Updated to put dia-api.xml in dia/ instead of api/
	* sources/Dia.metadata: Hide event Event and changed the param type of method SetParent in CanvasItem.
	* makefile: deleted api as a target
	* PROBLEMS: Added yet another problem
	* sample/sample.cs: Uncommented FindViewItem, since it triggers some bug
	* doc/en/*/*.xml: Updated to use assembly diacanvas-sharp instead of dia-sharp

2003-10-08  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* doc/en/Dia/Canvas.xml: Updated to match latest DiaCanvas2 CVS
	* doc/en/Dia/Shape.xml: Ditto
	* doc/en/Dia/CanvasItemFlags.xml: Documented
	* doc/en/Dia/CanvasItemUIStateFlags.xml: Documented
	* doc/en/Dia/EventMask: Documented
	* doc/en/Dia/EventType: Documented
	* doc/en/Dia/ShapeType.xml: Removed ' for consistence
	* TODO: Updated

2003-10-07  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* doc/en/Dia/Canvas.xml: Partial documented
	* doc/en/Dia/CanvasElementHandle.xml: Updated by updater.exe
	* doc/en/Dia/CanvasItem.xml: Ditto
	* doc/en/Dia/CanvasItemFlags.xml: Ditto